lab3/22301593/y.output
Terminals unused in grammar

   DO
   BREAK
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_name: ID

    7 $@1: /* empty */

    8 func_definition: type_specifier func_name LPAREN parameter_list RPAREN $@1 compound_statement

    9 $@2: /* empty */

   10 func_definition: type_specifier func_name LPAREN RPAREN $@2 compound_statement

   11 parameter_list: parameter_list COMMA type_specifier ID
   12               | type_specifier ID

   13 scope_marker: /* empty */

   14 compound_statement: LCURL scope_marker statements RCURL
   15                   | LCURL scope_marker RCURL

   16 var_declaration: type_specifier declaration_list SEMICOLON

   17 type_specifier: INT
   18               | FLOAT
   19               | VOID

   20 declaration_list: declaration_list COMMA ID
   21                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   22                 | ID
   23                 | ID LTHIRD CONST_INT RTHIRD

   24 statements: statement
   25           | statements statement

   26 statement: var_declaration
   27          | func_definition
   28          | expression_statement
   29          | compound_statement
   30          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   31          | IF LPAREN expression RPAREN statement
   32          | IF LPAREN expression RPAREN statement ELSE statement
   33          | WHILE LPAREN expression RPAREN statement
   34          | PRINTLN LPAREN ID RPAREN SEMICOLON
   35          | RETURN expression SEMICOLON

   36 expression_statement: SEMICOLON
   37                     | expression SEMICOLON

   38 variable: ID
   39         | ID LTHIRD expression RTHIRD

   40 expression: logic_expression
   41           | variable ASSIGNOP logic_expression

   42 logic_expression: rel_expression
   43                 | rel_expression LOGICOP rel_expression

   44 rel_expression: simple_expression
   45               | simple_expression RELOP simple_expression

   46 simple_expression: term
   47                  | simple_expression ADDOP term

   48 term: unary_expression
   49     | term MULOP unary_expression

   50 unary_expression: ADDOP unary_expression
   51                 | NOT unary_expression
   52                 | factor

   53 factor: variable
   54       | ID LPAREN argument_list RPAREN
   55       | LPAREN expression RPAREN
   56       | CONST_INT
   57       | CONST_FLOAT
   58       | variable INCOP
   59       | variable DECOP

   60 argument_list: arguments
   61              | /* empty */

   62 arguments: arguments COMMA logic_expression
   63          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 31 32
ELSE (259) 32
FOR (260) 30
WHILE (261) 33
DO (262)
BREAK (263)
INT (264) 17
CHAR (265)
FLOAT (266) 18
DOUBLE (267)
VOID (268) 19
RETURN (269) 35
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 34
ADDOP (275) 47 50
MULOP (276) 49
INCOP (277) 58
DECOP (278) 59
RELOP (279) 45
ASSIGNOP (280) 41
LOGICOP (281) 43
NOT (282) 51
LPAREN (283) 8 10 30 31 32 33 34 54 55
RPAREN (284) 8 10 30 31 32 33 34 54 55
LCURL (285) 14 15
RCURL (286) 14 15
LTHIRD (287) 21 23 39
RTHIRD (288) 21 23 39
COMMA (289) 11 20 21 62
SEMICOLON (290) 16 34 35 36 37
CONST_INT (291) 21 23 56
CONST_FLOAT (292) 57
ID (293) 6 11 12 20 21 22 23 34 38 39 54
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_name (44)
    on left: 6, on right: 8 10
func_definition (45)
    on left: 8 10, on right: 5 27
$@1 (46)
    on left: 7, on right: 8
$@2 (47)
    on left: 9, on right: 10
parameter_list (48)
    on left: 11 12, on right: 8 11
scope_marker (49)
    on left: 13, on right: 14 15
compound_statement (50)
    on left: 14 15, on right: 8 10 29
var_declaration (51)
    on left: 16, on right: 4 26
type_specifier (52)
    on left: 17 18 19, on right: 8 10 11 12 16
declaration_list (53)
    on left: 20 21 22 23, on right: 16 20 21
statements (54)
    on left: 24 25, on right: 14 25
statement (55)
    on left: 26 27 28 29 30 31 32 33 34 35, on right: 24 25 30 31 32
    33
expression_statement (56)
    on left: 36 37, on right: 28 30
variable (57)
    on left: 38 39, on right: 41 53 58 59
expression (58)
    on left: 40 41, on right: 30 31 32 33 35 37 39 55
logic_expression (59)
    on left: 42 43, on right: 40 41 62 63
rel_expression (60)
    on left: 44 45, on right: 42 43
simple_expression (61)
    on left: 46 47, on right: 44 45 47
term (62)
    on left: 48 49, on right: 46 47 49
unary_expression (63)
    on left: 50 51 52, on right: 48 49 50 51
factor (64)
    on left: 53 54 55 56 57 58 59, on right: 52
argument_list (65)
    on left: 60 61, on right: 54
arguments (66)
    on left: 62 63, on right: 60 62


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   17 type_specifier: INT .

    $default  reduce using rule 17 (type_specifier)


State 2

   18 type_specifier: FLOAT .

    $default  reduce using rule 18 (type_specifier)


State 3

   19 type_specifier: VOID .

    $default  reduce using rule 19 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    8 func_definition: type_specifier . func_name LPAREN parameter_list RPAREN $@1 compound_statement
   10                | type_specifier . func_name LPAREN RPAREN $@2 compound_statement
   16 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    func_name         go to state 13
    declaration_list  go to state 14


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    6 func_name: ID .
   22 declaration_list: ID .
   23                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 15

    LPAREN    reduce using rule 6 (func_name)
    $default  reduce using rule 22 (declaration_list)


State 13

    8 func_definition: type_specifier func_name . LPAREN parameter_list RPAREN $@1 compound_statement
   10                | type_specifier func_name . LPAREN RPAREN $@2 compound_statement

    LPAREN  shift, and go to state 16


State 14

   16 var_declaration: type_specifier declaration_list . SEMICOLON
   20 declaration_list: declaration_list . COMMA ID
   21                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

   23 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 19


State 16

    8 func_definition: type_specifier func_name LPAREN . parameter_list RPAREN $@1 compound_statement
   10                | type_specifier func_name LPAREN . RPAREN $@2 compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 20

    parameter_list  go to state 21
    type_specifier  go to state 22


State 17

   20 declaration_list: declaration_list COMMA . ID
   21                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 18

   16 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 16 (var_declaration)


State 19

   23 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 24


State 20

   10 func_definition: type_specifier func_name LPAREN RPAREN . $@2 compound_statement

    $default  reduce using rule 9 ($@2)

    $@2  go to state 25


State 21

    8 func_definition: type_specifier func_name LPAREN parameter_list . RPAREN $@1 compound_statement
   11 parameter_list: parameter_list . COMMA type_specifier ID

    RPAREN  shift, and go to state 26
    COMMA   shift, and go to state 27


State 22

   12 parameter_list: type_specifier . ID

    ID  shift, and go to state 28


State 23

   20 declaration_list: declaration_list COMMA ID .
   21                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 20 (declaration_list)


State 24

   23 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 23 (declaration_list)


State 25

   10 func_definition: type_specifier func_name LPAREN RPAREN $@2 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 31


State 26

    8 func_definition: type_specifier func_name LPAREN parameter_list RPAREN . $@1 compound_statement

    $default  reduce using rule 7 ($@1)

    $@1  go to state 32


State 27

   11 parameter_list: parameter_list COMMA . type_specifier ID

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 33


State 28

   12 parameter_list: type_specifier ID .

    $default  reduce using rule 12 (parameter_list)


State 29

   21 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 34


State 30

   14 compound_statement: LCURL . scope_marker statements RCURL
   15                   | LCURL . scope_marker RCURL

    $default  reduce using rule 13 (scope_marker)

    scope_marker  go to state 35


State 31

   10 func_definition: type_specifier func_name LPAREN RPAREN $@2 compound_statement .

    $default  reduce using rule 10 (func_definition)


State 32

    8 func_definition: type_specifier func_name LPAREN parameter_list RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 36


State 33

   11 parameter_list: parameter_list COMMA type_specifier . ID

    ID  shift, and go to state 37


State 34

   21 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 38


State 35

   14 compound_statement: LCURL scope_marker . statements RCURL
   15                   | LCURL scope_marker . RCURL

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 47
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statements            go to state 55
    statement             go to state 56
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 36

    8 func_definition: type_specifier func_name LPAREN parameter_list RPAREN $@1 compound_statement .

    $default  reduce using rule 8 (func_definition)


State 37

   11 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 11 (parameter_list)


State 38

   21 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 21 (declaration_list)


State 39

   31 statement: IF . LPAREN expression RPAREN statement
   32          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 66


State 40

   30 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 67


State 41

   33 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 68


State 42

   35 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 69
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 43

   34 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 70


State 44

   50 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 71
    unary_expression  go to state 72
    factor            go to state 65


State 45

   51 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 71
    unary_expression  go to state 73
    factor            go to state 65


State 46

   55 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 74
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 47

   15 compound_statement: LCURL scope_marker RCURL .

    $default  reduce using rule 15 (compound_statement)


State 48

   36 expression_statement: SEMICOLON .

    $default  reduce using rule 36 (expression_statement)


State 49

   56 factor: CONST_INT .

    $default  reduce using rule 56 (factor)


State 50

   57 factor: CONST_FLOAT .

    $default  reduce using rule 57 (factor)


State 51

   38 variable: ID .
   39         | ID . LTHIRD expression RTHIRD
   54 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 75
    LTHIRD  shift, and go to state 76

    $default  reduce using rule 38 (variable)


State 52

   27 statement: func_definition .

    $default  reduce using rule 27 (statement)


State 53

   29 statement: compound_statement .

    $default  reduce using rule 29 (statement)


State 54

   26 statement: var_declaration .

    $default  reduce using rule 26 (statement)


State 55

   14 compound_statement: LCURL scope_marker statements . RCURL
   25 statements: statements . statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 77
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statement             go to state 78
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 56

   24 statements: statement .

    $default  reduce using rule 24 (statements)


State 57

   28 statement: expression_statement .

    $default  reduce using rule 28 (statement)


State 58

   41 expression: variable . ASSIGNOP logic_expression
   53 factor: variable .
   58       | variable . INCOP
   59       | variable . DECOP

    INCOP     shift, and go to state 79
    DECOP     shift, and go to state 80
    ASSIGNOP  shift, and go to state 81

    $default  reduce using rule 53 (factor)


State 59

   37 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 82


State 60

   40 expression: logic_expression .

    $default  reduce using rule 40 (expression)


State 61

   42 logic_expression: rel_expression .
   43                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 83

    $default  reduce using rule 42 (logic_expression)


State 62

   44 rel_expression: simple_expression .
   45               | simple_expression . RELOP simple_expression
   47 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 84
    RELOP  shift, and go to state 85

    $default  reduce using rule 44 (rel_expression)


State 63

   46 simple_expression: term .
   49 term: term . MULOP unary_expression

    MULOP  shift, and go to state 86

    $default  reduce using rule 46 (simple_expression)


State 64

   48 term: unary_expression .

    $default  reduce using rule 48 (term)


State 65

   52 unary_expression: factor .

    $default  reduce using rule 52 (unary_expression)


State 66

   31 statement: IF LPAREN . expression RPAREN statement
   32          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 87
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 67

   30 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    expression_statement  go to state 88
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 68

   33 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 89
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 69

   35 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 90


State 70

   34 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 91


State 71

   53 factor: variable .
   58       | variable . INCOP
   59       | variable . DECOP

    INCOP  shift, and go to state 79
    DECOP  shift, and go to state 80

    $default  reduce using rule 53 (factor)


State 72

   50 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 50 (unary_expression)


State 73

   51 unary_expression: NOT unary_expression .

    $default  reduce using rule 51 (unary_expression)


State 74

   55 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 92


State 75

   54 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    $default  reduce using rule 61 (argument_list)

    variable           go to state 71
    logic_expression   go to state 93
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65
    argument_list      go to state 94
    arguments          go to state 95


State 76

   39 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 96
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 77

   14 compound_statement: LCURL scope_marker statements RCURL .

    $default  reduce using rule 14 (compound_statement)


State 78

   25 statements: statements statement .

    $default  reduce using rule 25 (statements)


State 79

   58 factor: variable INCOP .

    $default  reduce using rule 58 (factor)


State 80

   59 factor: variable DECOP .

    $default  reduce using rule 59 (factor)


State 81

   41 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 71
    logic_expression   go to state 97
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 82

   37 expression_statement: expression SEMICOLON .

    $default  reduce using rule 37 (expression_statement)


State 83

   43 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 71
    rel_expression     go to state 98
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 84

   47 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 71
    term              go to state 99
    unary_expression  go to state 64
    factor            go to state 65


State 85

   45 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 71
    simple_expression  go to state 100
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 86

   49 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 71
    unary_expression  go to state 101
    factor            go to state 65


State 87

   31 statement: IF LPAREN expression . RPAREN statement
   32          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 102


State 88

   30 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    expression_statement  go to state 103
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 89

   33 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 104


State 90

   35 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 35 (statement)


State 91

   34 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 105


State 92

   55 factor: LPAREN expression RPAREN .

    $default  reduce using rule 55 (factor)


State 93

   63 arguments: logic_expression .

    $default  reduce using rule 63 (arguments)


State 94

   54 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 106


State 95

   60 argument_list: arguments .
   62 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 107

    $default  reduce using rule 60 (argument_list)


State 96

   39 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 108


State 97

   41 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 41 (expression)


State 98

   43 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 43 (logic_expression)


State 99

   47 simple_expression: simple_expression ADDOP term .
   49 term: term . MULOP unary_expression

    MULOP  shift, and go to state 86

    $default  reduce using rule 47 (simple_expression)


State 100

   45 rel_expression: simple_expression RELOP simple_expression .
   47 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 84

    $default  reduce using rule 45 (rel_expression)


State 101

   49 term: term MULOP unary_expression .

    $default  reduce using rule 49 (term)


State 102

   31 statement: IF LPAREN expression RPAREN . statement
   32          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statement             go to state 109
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 103

   30 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 110
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 104

   33 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statement             go to state 111
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 105

   34 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 112


State 106

   54 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 54 (factor)


State 107

   62 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 71
    logic_expression   go to state 113
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 108

   39 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 39 (variable)


State 109

   31 statement: IF LPAREN expression RPAREN statement .
   32          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 114

    $default  reduce using rule 31 (statement)


State 110

   30 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 115


State 111

   33 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 33 (statement)


State 112

   34 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 34 (statement)


State 113

   62 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 62 (arguments)


State 114

   32 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statement             go to state 116
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 115

   30 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statement             go to state 117
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 116

   32 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 32 (statement)


State 117

   30 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 30 (statement)
